# MLOps-with-Agentic-AI_212504

./: pyproject.toml
DL_3-01-2026/: DL.ipynb  dl.txt
classification/: classification.ipynb
deployment_strategies_14-03-2026/: Dockerfile_model  commands.txt  install_kserve.sh  make_preds_kserve.py  server.py  server2.py
deployment_strategies_14-03-2026/.github/: ci.yaml
deployment_strategies_14-03-2026/abtest/: abtest.yaml  abtest_header.yaml
deployment_strategies_14-03-2026/bluegreen/: blue.yaml  green.yaml  service.yaml  switch-to-blue.sh  switch-to-green.sh
deployment_strategies_14-03-2026/canary/: canary20_hpa.yaml  canary20_keda.yaml  inference.yaml  monitor.yaml  network.yaml  service.yaml  vpa-memory.yaml  vpa.yaml
deployment_strategies_14-03-2026/config/: ml-model-versions.yaml
deployment_strategies_14-03-2026/examples/: caller-full-pipeline.yaml  caller-rollback.yaml  caller-workflow-dispatch.yaml
kfp_kserve/: commands.txt  kfpinstall.sh  make_preds.py  mnist_dist.py
kserve_22-02-2026/: Dockerfile_kservepred  Dockerfile_model  commands.txt  make_preds_kserve.py  mnist_dist_kserve.py  mnist_dist_kserve_canary.py  mnist_pipeline.yaml  run_pipeline.py  server.py  service_template.yaml  tf_script.py
kubeflow/: createkfp.py  iris_pipeline.yaml  kfp2.py  kubeflow.md
mlflow_04-01-2026/: basic_auth.ini  create_user.py  mlflow.md  parent-child-runs.ipynb  start_mlflow.sh  start_mlflow_basic.sh
mlflow_10-01-2026/: DockerfileMlflow  autolog.py  commands.txt  docker-compose.yaml  hyper.py  requirements.txt
mlflow_11-01-2026/: commands.txt  pyproject.toml
mlflow_11-01-2026/docker/: Dockerfile  docker-compose.yaml
mlflow_11-01-2026/mlflow_project/: Dockerfile  MLproject  train.py
mlops-cicd/: Dockerfile  params.yaml  pyproject.toml
mlops-cicd/.github/: dev.yaml  feature.yaml
mlops-cicd/dags/: dvc_experiment_dag.py  dvc_experiment_docker_dag.py
optuna_kfp_22022026/: db.sqlite3  iris_pipeline.yaml  kfp2.py  kfpcommands.txt  kfpdelete.sh  kfpdelete2.sh  kfpinstall.sh  kfppytorch.py  kubeflow_install.txt  mnist.py  mnist_pipeline.yaml  optuna_commands.txt  optunamlflow.py  optunatraindashboard.py
regressions/: data_with_faults.csv  regression.ipynb
timeseries_21-12-2025/: timeseires.ipynb
(+28 files in other folders)
