[project]
name = "mlops-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "category-encoders>=2.8.1",
    "flask>=3.1.2",
    "hdbscan>=0.8.41",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
    "xgboost>=3.1.2",
]

[tool.uv.workspace]
members = [
    "example",
]
