[project]
name = "mlops-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "category-encoders>=2.8.1",
    "flask>=3.1.2",
    "hdbscan>=0.8.41",
    "hyperopt>=0.2.7",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "ml-insights>=1.1.0",
    "mlflow-oidc-auth[full]>=5.7.0",
    "mlflow[auth]>=3.8.1",
    "more-itertools>=10.8.0",
    "numpy>=2.2.6",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "umap-learn>=0.5.9.post2",
    "xgboost>=3.1.2",
]

[tool.uv.workspace]
members = [
    "example",
]
