[project]
name = "cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==2.9.3",
    "apache-airflow-providers-docker>=4.3.1",
    "boto3>=1.42.25",
    "cookiecutter>=2.6.0",
    "dvc-s3>=3.3.0",
    "dvc[s3]>=2.1.0",
    "mlflow==2.21.1",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]
